--- a/main.css
+++ b/main.css
@@ -5,58 +5,62 @@ body {
 	margin: 0px;
 }
 
-.nav {
+nav {
 	position: fixed;
-	/*background-color: green;*/
-	background: rgba(0, 150, 0, 0.5);
+	background: rgba(0, 150, 0, 1);
 	z-index: 99;
-	width: 10%;
-	height: 100%;
-}
-
-.navLinks {
-	position: relative;
-	list-style-type: none;
-}
-
-.links img {
-	position: relative;
-	/*border: 2px solid red;*/
-	margin-bottom: 50%;
-	border-radius: 50%;
-	left: 50%;
-	transform: translateX(-50%);
-}
-
-.navLinks li {
-	padding-bottom: 30%;
-}
-
-.social {
-	position: relative;
-	left: 25%;
-	transform: translateX(-75%);
+	width: 100%;
+	min-height: 50px;
+	color: white;
 }
 
 .links {
-	position: relative;
-	float: inline-block;
-	font-size: 1.75em;
-	top: 20%;
-	/*transform: translateY(-60%);*/
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-size: 48px;
 }
 
-.links a {
-	padding-right: 20px;
+.links img {
+	display: none;
+}
+
+#navLinks {
+	min-width: 75%;
+	list-style-type: none;
+	display: flex;
+	justify-content: space-between;
+	margin: 0px;
+
+}
+
+#navLinks li {
+	min-height: 50px;
+	line-height: 48px;	
+}
+
+#navLinks li a {
+	text-decoration: none;
+	color: white;
+}
+
+#navLinks li a:hover, .links i:hover {
 	text-decoration: none;
 	color: black;
-	vertical-align: center;
+}
+
+.active {
+	background: rgba(0, 100, 0, 1);
 }
 
 
 .splash {
-	/*background-color: red;*/
+	top: 48px;
 	background-image: url("https://images.unsplash.com/photo-1498910265115-9fb541931cd1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b93ef63d91fab0386964e7e1ed2a971e&auto=format&fit=crop&w=1989&q=80");
+	background-size: cover;
+	background-repeat: no-repeat;
+	color: white;
+
 }
 
 #intro {
@@ -64,7 +68,6 @@ body {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	/*box-shadow: 5px 10px 10px;*/
 	font-family: 'Proza Libre', serif;
 	font-size: 1.5em;
 }
@@ -78,7 +81,9 @@ body {
 }
 
 .about {
-	/*max-height: 100vh;*/
+	top: 48px;
+	transform: perspective(400px) rotateY(45deg);
+
 }
 
 #gwg {
@@ -90,21 +95,16 @@ body {
 	position: relative;
 	height: 100vh;
 	max-height: 100vh;
-	max-width: 90%;
-	left: 10%;
+	max-width: 100vw;
+
 }
 
-.ewsod {
-	height: 300px;
-	width: 500px;
-}
+
 
 .contactLinks {
 	position: absolute;
 	list-style-type: none;
-	left: 25%;
-	top: 50%;
-	transform: translate(-75%, -50%);
+	top: 48px;
 }
 
 .contactLinks li {
@@ -118,4 +118,72 @@ body {
 .contactLinks li a {
 	text-decoration: none;
 	color: inherit;
+}
+
+.featured {
+	padding-top: 48px;
+}
+
+.projects {
+	display: flex;
+	flex-wrap: wrap;
+
+}
+
+.projectPreview {
+	width: 50%;
+}
+
+img {
+	width: 100%;
+}
+
+@media and (min-width: 780px) {
+	.nav {
+	position: fixed;
+	/*background-color: green;*/
+	background: rgba(0, 150, 0, 0.5);
+	z-index: 99;
+	width: 10%;
+	height: 100%;
+}
+/*#navLinks {
+	position: relative;
+	list-style-type: none;
+}
+
+.links img {
+	position: relative;
+	border: 2px solid red;
+	margin-bottom: 50%;
+	border-radius: 50%;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+#navLinks li {
+	padding-bottom: 30%;
+}
+
+.social {
+	position: relative;
+	left: 25%;
+	transform: translateX(-75%);
+}
+*/
+/*.links {
+	position: relative;
+	float: inline-block;
+	font-size: 1.75em;
+	top: 20%;
+	transform: translateY(-60%);
+}
+
+.links a {
+	padding-right: 20px;
+	text-decoration: none;
+	color: black;
+	vertical-align: center;
+}*/
+
 }
